src/codegen/snapshots/dinky_c__codegen__codegen__tests__codegen_main_bang_equals.snap
---
source: src/codegen/codegen.rs
expression: "CodeGenerator::new().generate_code(ast)"
---
Ok(
    [
        FunctionDecl(
            "main",
        ),
        Integer(
            2,
        ),
        Push(
            "rax",
        ),
        Integer(
            4,
        ),
        Pop(
            "rcx",
        ),
        NotEquals(
            "rax",
            "rcx",
        ),
        Return,
    ],
)
