src/codegen/snapshots/dinky_c__codegen__codegen__tests__codegen_main_logical_and.snap
---
source: src/codegen/codegen.rs
expression: "CodeGenerator::new().generate_code(ast)"
---
Ok(
    [
        FunctionDecl(
            "main",
        ),
        Integer(
            2,
        ),
        JumpIfNotEqualToNumber(
            0,
            "rax",
            "_clause2_1",
        ),
        SetResultToNumberAndJump(
            0,
            "_end_2",
        ),
        InsertLabel(
            "_clause2_1",
        ),
        Integer(
            4,
        ),
        NotEqualToNumber(
            0,
            "rax",
        ),
        InsertLabel(
            "_end_2",
        ),
        Return,
    ],
)
