src/codegen/snapshots/dinky_c__codegen__codegen__tests__codegen_main_multiplication.snap
---
source: src/codegen/codegen.rs
expression: "CodeGenerator::new().generate_code(ast)"
---
Ok(
    [
        FunctionDecl(
            "main",
        ),
        Integer(
            4,
        ),
        Push(
            "rax",
        ),
        Integer(
            2,
        ),
        Pop(
            "rcx",
        ),
        Multiply(
            "rcx",
        ),
        Return,
    ],
)
